--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "react-instafeed": "^1.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
